--- a/Assignment 6/.project
+++ b/Assignment 6/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Assigment 5</name>
+	<name>Assignment 6</name>
 	<comment></comment>
 	<projects>
 	</projects>
